--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "laravel-mix": "^0.6.0",
     "lodash": "^4.16.2",
     "normalize-css": "^2.3.1",
-    "vue": "^2.0.1"
+    "vue": "^2.0.1",
+    "vue-router": "^2.3.0"
   }
 }
