--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.3.0",
+        "doctrine/dbal": "^2.5",
         "intervention/image": "^2.3",
-        "doctrine/dbal": "^2.5"
+        "laravel/framework": "5.4.*",
+        "laravel/passport": "^2.0",
+        "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
