--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,7 @@
 {
-  "/js/app.js": "/js/app.c88d96e14a8242cca33c.js",
-  "/css/app.css": "/css/app.819392900858561f57b4.css",
-  "/js/vendor.js": "/js/vendor.8de76f87c29f71fa05f6.js",
+  "/js/app.js": "/js/app.a871afb82804549bb601.js",
+  "/css/app.css": "/css/app.4c8042aa7170bfb32508.css",
+  "/js/vendor.js": "/js/vendor.d6ec170c44a8d57ae2e8.js",
   "/js/manifest.js": "/js/manifest.d41d8cd98f00b204e980.js",
-  "/css/normalize.min.css": "/css/normalize.min.css"
+  "/css/normalize.min.css": "/css/normalize.min.836625e5ecabdada6dd84787e0f72a16.css"
 }
