--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "axios": "^0.15.2",
     "laravel-mix": "^0.10.0",
+    "normalize-css": "^2.3.1",
     "vue": "^2.0.1",
     "vue-router": "^2.3.0"
   }
