--- a/laradock/docker-compose.yml
+++ b/laradock/docker-compose.yml
@@ -129,12 +129,12 @@ services:
             args:
                 - MYSQL_DATABASE=bokehlicious
                 - MYSQL_USER=jarvis
-                - MYSQL_PASSWORD=Taxi723*
+                - MYSQL_PASSWORD=pwd
                 - MYSQL_ROOT_PASSWORD=root
         volumes:
             - mysql:/var/lib/mysql
         ports:
-            - "3306:3306"
+            - "3307:3306"
 
 ### MariaDB Container #######################################
 
