Add galeries folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /public/css/*
 /node_modules
 /public/galeries
+!/public/galeries/.gitkeep
 /public/storage
 /public/hot
 /storage/*.key
@@ -12,3 +13,6 @@ Homestead.yaml
 .env
 
 parameters\.json
+/bootstap
+/storage
+/public/mix-manifest.json
