--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.6.4",
         "doctrine/dbal": "^2.5",
         "intervention/image": "^2.3",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "5.5.*",
         "laravel/passport": "^2.0",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.3.0"
@@ -16,7 +16,8 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
+        "phpunit/phpunit": "~6.0",
+        "filp/whoops": "~2.0",
         "barryvdh/laravel-debugbar": "^2.3"
     },
     "autoload": {
@@ -46,6 +47,10 @@
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "config": {
